turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: not found: value elseif
 elseif( getCouleurSol() == Color.black )
 ^